css/style.css
/* ... */
.text-justify {
  text-align: justify;
}

.back-bg {
  border: 1px solid rgba(0, 0, 0, 0.20);
  background: var(--bs-white);
}

/* .back-bg:hover{
  background-color: var(--iq-dark);
} */

/* Office sayari css */
.india_card:hover .hover_add_card_india {
  display: block;
}

.london_card:hover .hover_add_card_london {
  display: block;
}

.singapore_card:hover .hover_add_card_singapore {
  display: block;
}

.switzerland_card:hover .hover_add_card_switzerland {
  display: block;
}

.south_africa_card:hover .hover_add_card_south_africa {
  display: block;
}

.romania_card:hover .hover_add_card_romania {
  display: block;
}

.kenya_card:hover .hover_add_card_kenya {
  display: block;
}

.itally_card:hover .hover_add_card_itally {
  display: block;
}

.usa_card:hover .hover_add_card_usa {
  display: block;
}
.philippines_card:hover .hover_add_card_philippines {
  display: block;
}

.content_hover_add {
  padding: 1rem 1rem 0 1rem;
}

.hover_add_card_india,
.hover_add_card_london,
.hover_add_card_singapore,
.hover_add_card_switzerland,
.hover_add_card_south_africa,
.hover_add_card_romania,
.hover_add_card_kenya,
.hover_add_card_itally,
.hover_add_card_usa,
.hover_add_card_philippines {
  display: none;
  text-align: left;
  margin: 6rem 0 0 5rem;
  width: 350px;
  align-items: center;
  padding: 1rem 0.8rem;
  border: 1px solid rgba(0, 0, 0, 0.20);
  background: white;
  position: absolute;
}

.office_section_wrapper {
  display: flex;
  gap: 1rem;
  text-align: center;
  flex-wrap: wrap;
}

.office_add_card .card_office_content {
  display: flex;
  gap: 1rem;
  margin: 0 auto;
  height: 4.5rem;
  align-items: center;
  padding: 1rem 0.8rem;
  border: 1px solid rgba(0, 0, 0, 0.20);
  background: #FFF;
  justify-content: space-around;
}

.office_add_card .card_office_content h3 {
  font-size: 1.5rem;
}

.office_add_card .card_office_content img {
  width: 100%;
  height: 100%;
}

.projects_card {
  cursor: pointer;
}

.projects_card:hover {
  background: var(--iq-primary) !important;
}
@media(max-width:1024px) {
  
}
@media(max-width:1024px) {
  .office_section_wrapper {
    gap: 1rem;
  }
}

@media(max-width:768px) {

  .hover_add_card_india,
  .hover_add_card_london,
  .hover_add_card_singapore,
  .hover_add_card_switzerland,
  .hover_add_card_south_africa,
  .hover_add_card_romania,
  .hover_add_card_kenya,
  .hover_add_card_itally,
  .hover_add_card_usa {
    /* text-align: center; */
    margin: 5rem 0 0 -4rem;
  }
}

@media(max-width:445px) {
  .hover_add_card_india,
  .hover_add_card_london,
  .hover_add_card_singapore,
  .hover_add_card_switzerland,
  .hover_add_card_south_africa,
  .hover_add_card_romania,
  .hover_add_card_kenya,
  .hover_add_card_itally,
  .hover_add_card_usa {
    margin: 5rem 0 0 -1rem;
  }
  .office_section_wrapper .card_office_content>h3{
    width: 50%;
    text-align: left;
  }
  .office_add_card {
    width: 100%;
  }

  .office_add_card .card_office_content img {
    width: auto;
  }
}

/*End Office sayari css */
@media(max-width:1024px) {
  .pricing-btn {
    position: absolute;
    text-align: center;
    left: 0;
    right: 0px;
    top: 220px;
    bottom: 0px;
  }

  header.transparent .topbar {
    padding: 10px 24px;
  }

  header.transparent .iq-header {
    padding: 10px 24px;
  }

  /* header .logo a img {
    height: 50px;
  }  */
  /* header .logo a img {
    height: 23px;
  } */
}

@media(max-width:991px) {
  .pricing-btn {
    position: absolute;
    text-align: center;
    left: 0;
    right: 0px;
    top: 185px;
    bottom: 0px;
  }

  .iq-icon {
    margin-bottom: 10px;
  }

  header.transparent .iq-header {
    padding: 10px 0px;
  }

  /* header .logo a img {
    height: 30px;
  } */
}

@media (min-width: 1400px) {

  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl,
  .container-xxl {
    max-width: 1400px !important;
  }
}


/* My Css */
.animation-img {
  text-align: center;
}

.animation-img img {
  width: 60%;
}

@media(max-width:1024px) {
  .animation-img img {
    width: 70%;
  }
}

@media(max-width:768px) {
  .animation-img img {
    width: 100%;
  }

  .responsive_pad {
    padding: 1rem !important;
  }
}

@media(max-width:991px) {
  .hidden-xs {
    text-align: center;
    order: 1;
  }
}

/* ========Multilang Sytle ==== */
.goog-te-gadget .goog-te-combo {
  margin: 0px !important;
}

#google_translate_element select {
  color: var(--iq-primary);
  border: none;
  padding: 3px;
  border-radius: 3px;
}

#google_translate_element select option {
  background: #fff;
}

#google_translate_element {
  top: calc(1rem - 30px);
  /* right: 5%; */
  /* position: absolute;
    display: flex;
    align-items: center; */
  justify-content: center;
  color: white;
  /* 
    width: 5rem;
    height: 2.5rem;
    background-color: red; */
  border-radius: 0.5rem;
  cursor: pointer;
  box-shadow: var(--box-shadow);
  z-index: 100 !important;
}

#google_translate_element span {
  display: none;
}

.goog-te-banner-frame {
  display: none;
}

.goog-logo-link {
  display: none !important;
}

.goog-te-gadget {
  color: transparent !important;
}

.VIpgJd-ZVi9od-ORHb-OEVmcd {
  display: none;
  /* position: absolute; */
  visibility: hidden !important;
  z-index: -10;
}
.goog-te-combo {
  /* margin-left: 61px; */
  /* margin-right: -166px !important; */
  vertical-align: baseline;
  margin-top: 0px !important;
}

.response_pad{
 padding: 3rem !important;   
}
@media (max-width:768px) {

  .iq-timeline .timeline:nth-child(2n) .timeline-content:after,
  .iq-timeline .timeline-content:after {
    display: none;
  }

}

@media (max-width:765px) {
  .iq-timeline .timeline-icon-new {
    top: 20%;
    right: 80%;
  }

  .iq-timeline .timeline-content,
  .iq-timeline .timeline:nth-child(2n) .timeline-content {
    margin-left: 80px;
  }

  .iq-timeline:before {
    left: 10%;
  }

  .iq-timeline .year,
  .iq-timeline .timeline:nth-child(2n) .year {
    margin-left: 20%;
  }
}
/* ... */

